--- a/.gitignore
+++ b/.gitignore
@@ -131,3 +131,6 @@ app.*.symbols
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
 !/dev/ci/**/Gemfile.lock
 !.vscode/settings.json
+
+# TODO flutterfire configure로 생성 가능
+lib/firebase_options.dart
