ci: 프로젝트 Analytics, Crashlytics 연동

--- a/.gitignore
+++ b/.gitignore
@@ -134,3 +134,7 @@ app.*.symbols
 
 # TODO flutterfire configure로 생성 가능
 lib/firebase_options.dart
+/ios/firebase_app_id_file.json
+/android/app/google-services.json
+/ios/Runner/GoogleService-Info.plist
+/ios/Podfile
