--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,8 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   firebase_core: ^2.9.0
+  firebase_analytics: ^10.2.0
+  firebase_crashlytics: ^3.1.0
 
 dev_dependencies:
   flutter_test:
