--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,11 +13,23 @@ dependencies:
   firebase_core: ^2.9.0
   firebase_analytics: ^10.2.0
   firebase_crashlytics: ^3.1.0
+  provider: ^6.0.5
+  flutter_svg: ^2.0.5
+  freezed_annotation: ^2.2.0
+  json_annotation: ^4.8.0
+  drift: ^2.7.0
+  sqlite3_flutter_libs: ^0.5.13
+  path_provider: ^2.0.14
+  path: ^1.8.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  build_runner: ^2.3.3
+  freezed: ^2.3.2
+  json_serializable: ^6.6.1
+  drift_dev: ^2.7.0
 
 flutter:
   uses-material-design: true
