feat: 파이어베이스 원격 설정 추가 및 provider 샘플 코드 작성
MVVM 아키텍처
- data, domain 패키지는 도메인 기준
- ui 패키지는 화면 기준

Database 샘플 코드
- ORM 의존성 추가
- user 샘플 코드 작성

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   sqlite3_flutter_libs: ^0.5.13
   path_provider: ^2.0.14
   path: ^1.8.2
+  firebase_remote_config: ^4.0.0
 
 dev_dependencies:
   flutter_test:
