--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   path: ^1.8.2
   firebase_remote_config: ^4.0.0
   dynamic_color: ^1.6.3
+  get_it: ^7.2.0
+  event_hub: ^0.2.1
 
 dev_dependencies:
   flutter_test:
