--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   event_hub: ^0.2.1
   cached_network_image: ^3.2.3
   yaml: ^3.1.1
+  carousel_slider: ^4.2.1
 
 dev_dependencies:
   flutter_test:
