--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   cached_network_image: ^3.2.3
   yaml: ^3.1.1
   carousel_slider: ^4.2.1
+  video_player: ^2.6.1
 
 dev_dependencies:
   flutter_test:
